*Empty MediaWiki Message*

--- a/Чангошт.mw
+++ b/Чангошт.mw
@@ -31,7 +31,7 @@
 
 [[Артовкс:Romania harta etnica 2011.PNG|thumb|250px|Пижесэ невтезь мадьяронь раськетьне, конат эрить Румыниясо]]
 
-Кортыть [[Мадьяронь кель|мадьяронь кельсэ]] ({{lang-hu|magyar, magyar nyelv}}) кона совавтови [[Суоми-угрань кельть|суоми-угрань келень]] группаньте, [[Хантонь кель|хантонь]] ды [[Мансинь кель|мансинь]] кельтнень марто теи угрань группанть. 
+Кортыть [[Мадьяронь кель|мадьяронь кельсэ]]<ref>Siarl Ferdinand, ''Situation of the Csángó dialect of Moldavia in Romania'', Hungarian Cultural Studies, 2016 [https://www.academia.edu/29116236/Situation_of_the_Cs%C3%A1ng%C3%B3_Dialect_of_Moldavia_in_Romania]</ref> ({{lang-hu|magyar, magyar nyelv}}) кона совавтови [[Суоми-угрань кельть|суоми-угрань келень]] группаньте, [[Хантонь кель|хантонь]] ды [[Мансинь кель|мансинь]] кельтнень марто теи угрань группанть. 
 
 == Сёрм.: ==
 <references />
