*Empty MediaWiki Message*

--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -27,6 +27,13 @@ MSKS=0|
 
 [[Петроской ош]] - Карелэнь Руспубликань прявтошось.
 
+== Карелэнь масторпелькстне ==
+=== Ошонь кужомастортнэ ==
+* [[Петроскоень кужомастор]]
+* [[Костомукшань кужомастор]]
+=== Буетне ===
+
+
 {{Суоми-угрань масторт}}
 {{Пелевеёнксонь-Чивалгомань федерациянь кужось}}
 <br clear="all">
