*Empty MediaWiki Message*

--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -28,7 +28,7 @@ MSKS=0|
 [[Петроской ош]] - Карелэнь Руспубликань прявтошось.
 
 == Карелэнь масторпелькстне ==
-=== Ошонь кужомастортнэ ==
+=== Ошонь кужомастортнэ ===
 * [[Петроскоень кужомастор]]
 * [[Костомукшань кужомастор]]
 === Буетне ===
