--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -32,7 +32,22 @@ MSKS=0|
 * [[Петроскоень кужомастор]]
 * [[Костомукшань кужомастор]]
 === Буетне ===
-
+* [[Беломорскоень буе (Карелия)|Беломорскоень]]
+* [[Калевалань буе (Карелия)|Калевалань]]
+* [[Кемень буе (Карелия)|Кемень]]
+* [[Кондопогань буе (Карелия)|Кондопогань]]
+* [[Лахденпохьянь буе (Карелия)|Лахденпохьянь]]
+* [[Лоухинь буе (Карелия)|Лоухинь]]
+* [[Медвежьегорскоень буе (Карелия)|Медвежьегорскоень]]
+* [[Муезерскоень буе (Карелия)|Муезерской]]
+* [[Олонецэнь буе (Карелия)|Олонецэнь]]
+* [[Питкярантань буе (Карелия)|Питкярантань]]
+* [[Прионежской буе (Карелия)|Прионежской]]
+* [[Пряжань буе (Карелия)|Пряжань]]
+* [[Пудожонь буе (Карелия)|Пудожонь]]
+* [[Сегежань буе (Карелия)|Сегежа]]
+* [[Сортавалань буе (Карелия)|Сортавалань]]
+* [[Суоярвинь буе (Карелия)|Суоярвинь]]
 
 {{Суоми-угрань масторт}}
 {{Пелевеёнксонь-Чивалгомань федерациянь кужось}}
