--- a/Кемень_буе_(Карелия).mw
+++ b/Кемень_буе_(Карелия).mw
@@ -36,7 +36,7 @@
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      = 
- | Сайт                           = 
+ | Сайт                           = kemrk.ru
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
