*Empty MediaWiki Message*

--- a/Кемень_буе_(Карелия).mw
+++ b/Кемень_буе_(Карелия).mw
@@ -43,4 +43,6 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 
-'''Кемень буе'''  - Карелэнь Республикань буесь
+'''Кемень буе'''  - [[Карелэнь Республикась|Карелэнь Республикань]] буесь.
+
+[[Категория:Карелэнь Республикань буетне]]
