--- a/Ярмакт.mw
+++ b/Ярмакт.mw
@@ -1,3 +1,5 @@
+
+[[Артовкс:BilleteiNTER II.jpg|кенжешка]]
 '''Я́рмакт''' — те пелькс, кона невти мезеньгак питнензэ. Ярмакокс кол-коли путыть кода курмот-кармот, микшнема сюлмавкст (обязательстват).
 
 Ярмактнэ улить [[2 (кавто)|кавто]] ёнксонь: натуральнойть ды тешкстазь. 
