Replacing Coat_of_Arms_Drohobych.png with [[File:Coat_of_Arms_of_Drohobych.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #4]]: To harmonize the file

--- a/Дрогобыч_ош.mw
+++ b/Дрогобыч_ош.mw
@@ -6,7 +6,7 @@
  |изображение             = 
  |подчинение              = 
  |мастор                  = Украина Мастор
- |герб                    = Coat of Arms Drohobych.png
+ |герб                    = Coat of Arms of Drohobych.png
  |коцт                    = UKR Дрого́бич flag.gif
  |описание герба          = 
  |описание флага          = 
