([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:UKR Дрого́бич flag.gif]] → [[File:Flag of Drohobych.gif]] [[c:COM:FR#reasons|File renaming criterion #4]]: To harmonize the file names of a set of images: so that only one part of all names dif…

--- a/Дрогобыч_ош.mw
+++ b/Дрогобыч_ош.mw
@@ -7,7 +7,7 @@
  |подчинение              = 
  |мастор                  = Украина Мастор
  |герб                    = Coat of Arms of Drohobych.png
- |коцт                    = UKR Дрого́бич flag.gif
+ |коцт                    = Flag of Drohobych.gif
  |описание герба          = 
  |описание флага          = 
  |ширина герба            = 
