*Empty MediaWiki Message*

--- a/Ветькеть.mw
+++ b/Ветькеть.mw
@@ -1,4 +1,32 @@
+{{Раське
+ |эрзянь_лем        = Ветькеть
+ |артовкс           = <div>
+[[File:Vera Kuzmina.jpg|80px]] [[Fale:Russian Winter Festival London 2007 119.jpg|80px]]
+[[Файл:I Y Yakovlev.jpg|80px]]<br />
+<small>[[Кузьмина Вера Кузьминична|Вера Кузьмина]]{{•}} [[Иванов Константин Васильевич (поэт)|Константин Иванов]]{{•}} [[Яковлев Иван Яковлевич|Иван Яковлев]]</small>
+[[File:Nikolyskiy Nikolay Vasilyevich.jpg|80px]] [[Fike:NikolaevAG.jpg|80px]] [[File:Геннадий Николаевич Айги.jpg|80px]]
+<small>
+[[Никольский Николай Васильевич|Николай Никольский]]{{•}} [[Николаев Андриян Григорьевич|Андриян Николаев]]{{•}} [[Айги Геннадий Николаевич|Геннадий Айги]]
+</div>
+  |артовксонть покшолмазо = 300px
+  |артовксонть эйстэ      = Секеитьнень Раськень Коцт
+ |эсьлем            = Ceangăi / Csángó
+ |эрицятне          = 
+ |эрямо таркаст     = {{Масторкоцт|Россия}}: <br /> &nbsp;1&nbsp;435&nbsp;872 (пер. 2010)<ref name="пер.2010">[http://www.gks.ru/free_doc/new_site/perepis2010/perepis_itogi1612.htm Официальный сайт Всероссийской переписи населения 2010 года. Информационные материалы об окончательных итогах Всероссийской переписи населения 2010 года]</ref>, 1&nbsp;637&nbsp;094 (пер. 2002)<ref name="perepis">{{cite web|author=|datepublished=|url=http://www.perepis2002.ru/content.html?id=11&docid=10715289081463|title=Всероссийская перепись населения 2002 года|lang=|publisher=|accessdate=2009-12-24|archiveurl=http://www.webcitation.org/616BvJEEv|archivedate=2011-08-21}}</ref><ref>[http://demoscope.ru/weekly/ssp/rus_nac_02.php Всероссийская перепись населения 2002 года. Национальный состав населения по регионам России]</ref><br />
+
+{{Масторкоцт|Мадяронь Мастор}}
+ |кулозь            = 
+ |архкультура       = 
+ |кель              = [[Ветькеть кель]]
+ |раса              = 
+ |кемемась          = 
+ |малавикс раськеть = [[чăвашсем]]
+ |кельгевти         = [[тюркань раське]]
+ |совавты           =  
+ |чачома            = 
+}}
+
 {{Commonscat|Chuvash people|Ветькеть}}
 '''Ветькеть''' ({{Lang-cv|чăвашсем}}, {{Lang-ru|чуваши}}) — тюркань раське, кона эри [[Россия]]со.
-
+{{Reflist}}
 [[Категория:Раськеть]]
