*Empty MediaWiki Message*

--- a/Ветькеть.mw
+++ b/Ветькеть.mw
@@ -1,12 +1,9 @@
 {{Раське
  |эрзянь_лем        = Ветькеть
  |артовкс           = <div>
-[[File:Vera Kuzmina.jpg|80px]] [[Fale:Russian Winter Festival London 2007 119.jpg|80px]]
-[[Файл:I Y Yakovlev.jpg|80px]]<br />
+[[Артовкс:Vera Kuzmina.jpg|80px]] [[Артовкс:K.Ivanov.jpg|80px]]
+[[Артовкс:I Y Yakovlev.jpg|80px]]<br />
 <small>[[Кузьмина Вера Кузьминична|Вера Кузьмина]]{{•}} [[Иванов Константин Васильевич (поэт)|Константин Иванов]]{{•}} [[Яковлев Иван Яковлевич|Иван Яковлев]]</small>
-[[File:Nikolyskiy Nikolay Vasilyevich.jpg|80px]] [[Fike:NikolaevAG.jpg|80px]] [[File:Геннадий Николаевич Айги.jpg|80px]]
-<small>
-[[Никольский Николай Васильевич|Николай Никольский]]{{•}} [[Николаев Андриян Григорьевич|Андриян Николаев]]{{•}} [[Айги Геннадий Николаевич|Геннадий Айги]]
 </div>
   |артовксонть покшолмазо = 300px
   |артовксонть эйстэ      = Секеитьнень Раськень Коцт
