--- a/Ветькеть.mw
+++ b/Ветькеть.mw
@@ -8,8 +8,8 @@
   |артовксонть покшолмазо = 300px
   |артовксонть эйстэ      = Ветьке раськень содавикс ломанть
  |эсьлем            = чăваш
- |эрицятне          = ~ 1,5 млн
- |эрямо таркаст     = {{Масторкоцт|Россия}}: <br /> &nbsp;1&nbsp;435&nbsp;872 (пер. 2010)<ref name="пер.2010">[http://www.gks.ru/free_doc/new_site/perepis2010/perepis_itogi1612.htm Официальный сайт Всероссийской переписи населения 2010 года. Информационные материалы об окончательных итогах Всероссийской переписи населения 2010 года]{{ref-ru}}</ref>, 1&nbsp;637&nbsp;094 (пер. 2002)<ref name="perepis">{{cite web|author=|datepublished=|url=http://www.perepis2002.ru/content.html?id=11&docid=10715289081463|title=Всероссийская перепись населения 2002 года|lang=|publisher=|accessdate=2009-12-24|archiveurl=http://www.webcitation.org/616BvJEEv|archivedate=2011-08-21}}{{ref-ru}}</ref><ref>[http://demoscope.ru/weekly/ssp/rus_nac_02.php Всероссийская перепись населения 2002 года. Национальный состав населения по регионам России]{{ref-ru}}</ref><br />
+ |эрицятне          = ~ 1,5 млн.
+ |эрямо таркаст     = {{Масторкоцт|Россия}}: <br /> &nbsp;1&nbsp;435&nbsp;872 (сёр. [[2010]])<ref name="сёрм.2010">[http://www.gks.ru/free_doc/new_site/perepis2010/perepis_itogi1612.htm Официальный сайт Всероссийской переписи населения 2010 года. Информационные материалы об окончательных итогах Всероссийской переписи населения 2010 года]{{ref-ru}}</ref>, 1&nbsp;637&nbsp;094 (сёрм. [[2002]])<ref name="perepis">{{cite web|author=|datepublished=|url=http://www.perepis2002.ru/content.html?id=11&docid=10715289081463|title=Всероссийская перепись населения 2002 года|lang=|publisher=|accessdate=2009-12-24|archiveurl=http://www.webcitation.org/616BvJEEv|archivedate=2011-08-21}}{{ref-ru}}</ref><ref>[http://demoscope.ru/weekly/ssp/rus_nac_02.php Всероссийская перепись населения 2002 года. Национальный состав населения по регионам России]{{ref-ru}}</ref><br />
  |кулозь            = 
  |архкультура       = 
  |кель              = [[Ветькень кель]]
