*Empty MediaWiki Message*

--- a/Ветькеть.mw
+++ b/Ветькеть.mw
@@ -21,7 +21,16 @@
  |чачома            = 
 }}
 {{Commonscat|Chuvash people|Ветькеть}}
-'''Ветькеть''' ({{Lang-cv|чăвашсем}}, {{Lang-ru|чуваши}}) — тюркань раське, кона эри [[Россия]]со.
+'''Ветькеть''' ({{Lang-cv|чăвашсем}}, {{Lang-ru|чуваши}}) — тюркань<ref>[http://enc-dic.com/enc_sovet/Chuvashi-99689/ Чуваши — Большая Советская энциклопедия  — Энциклопедии & Словари{{ref-ru}}]</ref> раське, кона эри [[Россия]]со, ды сон ундоксов [[Чувашонь Республикась|Чувашонь Республикасо]]. 
+
+Эрицятнеде малав 1,5 млн. ломанть, эйстэст Россиясо 1 млн. 435 тёж. Чувашиясо эрить ансяк пелест ветькетнень эйстэ, лиятатне эрить Россиянь эрьва-кодамо ёнкстнэва, аволь покш пелькс эйстэст — Россиянь томбале, [[Казахстан Мастор|Казахстансо]], [[Узбекистан]]со ды [[Украина]]со. 
+
+Ветькетьне ютковаст явовить колмо раськень пельксэс:
+* [[Вирьял|верце ветькеть]] (''вирья́л'' эли ''тури́'') — Чувашиянь [[Пелеве ёнкс|пелеве]]-[[чивалгома]]со;
+* [[Анат енчи|каншка-алце ветькеть]] (''ана́т енчи́'') — Чувашиянь [[Пелеве ёнкс|пелеве]]-[[Чилисема (пертпельксэнь вал)|чилисемасо]];
+* [[Анатри|алце ветькеть]] (''анатри́'') — Чувашиянь [[Лембе ёнкс|лембе ёнкссо]] ды сонзэ томбале;
+
+Кортыть [[ветькень кель]]сэ. Кадовсь вейкине эриця келекс булгаронь группань [[тюркань кель]]тнень. Кельсэнть улить колмо кортавкст: верце ({{Lang-ru|«окающий»}}), куншкаалце, алце ({{Lang-ru|«укающий»}}). 
 
 == Лисьм.: ==
 <references />
