--- a/Мекшень_кирдема.mw
+++ b/Мекшень_кирдема.mw
@@ -1,3 +1,5 @@
+[[Артовкс:Wiki-Yäyläü2016 Şülgäntaş 106.jpg|кенжешка]]
+[[Артовкс:Wiki-Yäyläü2016 Şülgäntaş 103.jpg|кенжешка]]
 '''Мекшень кирдема'''— кезэрень [[эрзят|эрзя раськень]] кой.
 Касомстонзо сон ютась колмо кить: бортничества, кандосо мекшень кирдема ды нешке пирень тейнема. Минек эрань I тёжтиестэнть эрзятне, кода теде икелень пингетнестэяк, пурнасть се меденть, конань кандтнесть чувтонь ундотнес идем мекшетне. Те меденть ды штанть нолдасть тевс эсест кудоютксо ды полавтнесть эрьва мезе лангс, микшнесть. <br />
 
