--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -28,9 +28,98 @@ HeadNm= Рустэм Хамитов|
 MSKS=+2|
 }}
 [[Артовкс:Bashkir03.png|thumb|250px|right]]
-'''Башкирия Республикась''' (Башкирэнь Масторось {{lang-ru|Республика Башкирия}}, {{lang-ba|Башҡортостан Республикаһы}}) — ашти [[Россия Мастор|Россия Масторсо]].
+'''Башкирия Республикась''' (Башкирэнь Масторось {{lang-ru|Республика Башкирия}}, {{lang-ba|Башҡортостан Республикаһы}}) — ашти [[Россия Мастор|Россия Масторсо]].  Башкирия Республикась ды Башкортостан лемтне вейкеть. Совавтови [[Россия Масторонть Равчирева федерациянь кужось|Равчирева федерациянь кужос]], кода Уралонь экономикань буень пелькс. Прявтошост — [[Уфа ош]].
+
+Ульнесь теезь [[1917 ие]]нь [[сундерьковонь 15 чи]]стэ ([[сундерьковонь 29 чи]]) кода Башкурдистан раськень-мастор, [[1919 ие]]нь [[эйзюрковонь 20 чи]]стэ лемезэ Башкирэнь АССР<ref>[http://башкирская-энциклопедия.рф/index.php/prosmotr/2-statya/6921-respublika-bashkortostan Статья «Республика Башкортостан» в Башкирской энциклопедии] {{ref-ru}}</ref>. [[1990 ие]]нь [[ожоковонь 11 чи]]стэ лемдяви  Башкирэнь Советэнь Социалистической Республика — Башкортостан,  [[1992 ие]]нь [[даволковонь 25 чи]]стэ мерить Республика Башкортостан.  Эрицятнеде 4 071 064<ref>[http://www.gks.ru/free_doc/new_site/population/demo/Popul2016.xls Оценка численности постоянного населения на 1 января 2016 года и в среднем за 2015 год {{ref-ru}}]</ref> лом. ([[2016 ие|2016]]),  васенце тарка Россиясо республикатнень ютксо.
+
+Башкортостан ашти шабрацек [[Пермень край|Пермень краенть]], [[Свердловонь ёнкс|Свердловонь]], [[Челябань ёнкс|Челябань]], [[Оренбургонь ёнкс|Оренбургонь]] ёнкстнэнь, [[Печкасонь Республикась|Печкасонь]] ды [[Удмуртонь Республикась|Удмуртонь]] Республикатнень марто.
+
+==Географиянь аштемазо==
+Башкортостансь ашти [[Лембеёнкс Урал]]онь ды [[Икельцурал]]онь пандтнень чивалгомань ёнкссованть. Сех верьга таркась республикасо — [[Ямантау пандо]]сь (1640 метрат). Покшолмазо 142 947  тёж. вп², мезе саявты ансяк 0,84 % Россиянь Масторсто. Республикась сравтовсь [[Пелеве ёнкс|пелевеёнксто]] [[Лембе ёнкс|лембе ёнксов]] 550 вп кувалмос, чивалгомасто чилисемас — 430 [[вайгельпе|вп]]-ть.
+
+== Башкириянь буетне ==
+Ней Башкириясо 54 административной буеть, 21 ошт, 2 ошкондямо эрямо таркат ([[Чишмы]] ды [[Приютово (Башкортостан)|Приютово]]), 828 велень администрацият, 4434 велень эрямо таркат<ref>[http://www.bashstat.ru/BGDF/RB08/issWWW.exe/Stg/d000/i000003r.htm Административно-территориальное деление Республики Башкортостан] {{ref-ru}}</ref><ref>[http://bashstat.gks.ru/wps/wcm/connect/rosstat_ts/bashstat/resources/7ba81d004e64acd68cc5ef21f378d622/Итоги+Всероссийской+переписи+населения+2010+года+по+Республике+Башкортостан.pdf Итоги Всероссийской переписи населения по Республике Башкортостан (pdf). Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан.] {{ref-ru}}</ref>. 
+{|border="0"
+|-
+|rowspan="2" style="padding-left:15px;"|[[Артовкс:Admin-map-Bashkiria-region.gif|left|195px|Буень ланкс явомась Башкириясо]]
+|-style="vertical-align:top;"
+|'''Буеть'''
+# [[Абзелиловонь буе|Абзелиловонь]]
+# [[Альшеевень буе|Альшеевень]]
+# [[Архангелэнь буе|Архангелэнь]]
+# [[Аскинэнь буе|Аскинэнь]]
+# [[Аургазинэнь буе|Аургазинэнь]]
+# [[Баймаконь буе|Баймаконь]]
+# [[Бакалинэнь буе|Бакалинэнь]]
+# [[Балтачевэнь буе|Балтачевэнь]]
+# [[Белебеень буе|Белебеень]]
+# [[Белокатаень буе|Белокатаень]]
+# [[Белорецэнь буе|Белорецэнь]]
+# [[Бижбуляконь буе|Бижбуляконь]]
+# [[Бирскоень буе|Бирскоень]]
+# [[Благоваронь буе|Благоваронь]]
+# [[Благовещэнань буе (Башкортостан)|Благовещэнань]]
+# [[Буздяконь буе|Буздякяконь]]
+# [[Бураевэнь буе|Бураевэнь]]
+# [[Бурзянонь буе|Бурзянонь]]
+|
+<ol start=19>
+<li> [[Гафурийень буе|Гафурийень]]
+<li> [[Давлекановонь буе|Давлекановонь]]
+<li> [[Дуванонь буе|Дуванонь]]
+<li> [[Дюртюлинэнь буе|Дюртюлинэнь]]
+<li> [[Ермекеевень буе|Ермекеевень]]
+<li> [[Зианчуринень буе|Зианчуринень]]
+<li> [[Зилаирэнь буе|Зилаирэнь]]
+<li> [[Иглинэнь буе|Иглинэнь]]
+<li> [[Илишевень буе|Илишевень]]
+<li> [[Ишимбаень буе|Ишимбаень]]
+<li> [[Калтасинэнь буе|Калтасинэнь]]
+<li> [[Караиделэнь буе|Караиделэнь]]
+<li> [[Кармаскалинэнь буе|Кармаскалинэнь]]
+<li> [[Кигинэнь буе|Кигинэнь]]
+<li> [[Якстерькевень буе|Якстерькевень]]
+<li> [[Кугарчинэнь буе|Кугарчинэнь]]
+<li> [[Кушнаренконь буе|Кушнаренконь]]
+<li> [[Куюргазинэнь буе|Куюргазинэнь]]
+|
+<ol start=37>
+<li> [[Мелеузовонь буе|Мелеузовонь]]
+<li> [[Мечетлинэнь буе|Мечетлинэнь]]
+<li> [[Мишкинэнь буе (Башкортостан)|Мишкинэнь ]]
+<li> [[Миякинэнь буе|Миякинэнь]]
+<li> [[Нуриманонь буе|Нуриманонь]]
+<li> [[Салаватонь буе|Салаватонь]]
+<li> [[Стерлибашэнь буе|Стерлибашэнь]]
+<li> [[Стерлитамаконь буе|Стерлитамаконь]]
+<li> [[Татышлинэнь буе|Татышлинэнь]]
+<li> [[Туймазань буе|Туймазань]]
+<li> [[Уфань буе|Уфань]]
+<li> [[Учалинэнь буе|Учалинэнь]]
+<li> [[Фёдоронь буе Башкортостанонь|Фёдоронь буе]]
+<li> [[Хайбуллань буе|Хайбуллань]]
+<li> [[Чекмагушэнь буе|Чекмагушэнь]]
+<li> [[Чишминэнь буе|Чишминэнь]]
+<li> [[Шаранонь буе|Шаранонь]]
+<li> [[Янаулонь буе|Янаулонь]]
+</ol>
+|}
+
+
+==Фотованмот ==
+<gallery>
+Артовкс:Соколиная скала.jpg|thumb|350px|[[Нугуш лей (Ашо леень сянглей)|Нугуш леенть]] чудемазо.
+Артовкс:Шихан Торатау и коровы.jpg|thumb|350px|Шихан [[Тратау]].
+Артовкс:Atysh waterfall (2008).jpg|thumb|350px|[[Атыш (веденьпрый)|Атыш]] веденьпый.
+Артовкс:Лошади на Банном.jpg|thumb|350px|[[Башкирэнь алаша]]тне [[Яктыкуль эрьке]]нть вакссо.
+</gallery>
+
+== Лисьм.: ==
+<references />
+
 <br clear="all">
 {{Равчирева федерациянь кужось}}
+
 <br clear="all">
 {{Россия Масторонть масторпелькстнэ}}
 {{stub}}
