*Empty MediaWiki Message*

--- a/Абзелиловонь_буе.mw
+++ b/Абзелиловонь_буе.mw
@@ -35,8 +35,8 @@
  | Телефонный код                 = 
  | Почтовые индексы               = 
  | Интернет-домен                 = 
- | Код автомобильных номеров      =
- | Сайт                           = 
+ | Код автомобильных номеров      = 02, 102
+ | Сайт                           = http://www.abyalil.ru
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
