--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -110,7 +110,7 @@ MSKS=+2|
 <gallery>
 Артовкс:Соколиная скала.jpg|thumb|350px|[[Нугуш лей (Ашо леень сянглей)|Нугуш леенть]] чудемазо.
 Артовкс:Шихан Торатау и коровы.jpg|thumb|350px|Шихан [[Тратау]].
-Артовкс:Atysh waterfall (2008).jpg|thumb|350px|[[Атыш (веденьпрый)|Атыш]] веденьпый.
+Артовкс:Atysh waterfall (2008).jpg|thumb|350px|[[Атыш (веденьпрый)|Атыш]] веденьпрый.
 Артовкс:Лошади на Банном.jpg|thumb|350px|[[Башкирэнь алаша]]тне [[Яктыкуль эрьке]]нть вакссо.
 </gallery>
 
