*Empty MediaWiki Message*

--- a/Альшеевень_буе.mw
+++ b/Альшеевень_буе.mw
@@ -24,7 +24,7 @@
   |Название главы                  = 
  |Глава2                           = 
   |Название главы2                 = Глава муниципального образования
- | Карта                          = 
+ | Карта                          = Location of Alsheevskiy rayon (Bashkortostan).svg
  | Размер карты                   = 
  | Карта административной единицы = 
  | Размер карты ае                = 
