*Empty MediaWiki Message*

--- a/Альшеевень_буе.mw
+++ b/Альшеевень_буе.mw
@@ -43,11 +43,11 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 
-'''Альшеевень буе''' ({{lang-ru|Альшеевский район}}, {{lang-ba|Әлшәй районы}}) — те буе лембе-чивалгома ёно [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
+'''Альшеевень буе''' ({{lang-ru|Альшеевский район}}, {{lang-ba|Әлшәй районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
 Куншка ошось - [[Раевской (Альшеевский буе)|Раевской]] веле. 
 
-== Бижбуляконь буень велеть ==
+== Альшеевень буень велеть ==
 
 
 == Сёрм.: ==
