*Empty MediaWiki Message*

--- a/Архангелэнь_буе.mw
+++ b/Архангелэнь_буе.mw
@@ -45,12 +45,12 @@
 
 '''Архангелэнь буе''' ({{lang-ru|Арха́нгельский район}}, {{lang-ba|Архангел районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
-Куншка ошось - [[Архангельской (Башкирия)|Архангельской]] веле. 
+Куншка таркась - [[Архангельской (Башкирия)|Архангельской]] веле. 
 
 == Архангелэнь буень велеть ==
 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
