*Empty MediaWiki Message*

--- a/Башкирэнь_кель.mw
+++ b/Башкирэнь_кель.mw
@@ -1,4 +1,41 @@
-'''Башкирэнь кель''' —
+{{Кель
+ |чачо                     = Altaic
+ |лем                      = Башкирэнь кель
+ |эсьлем                   = башҡорт теле
+ |ёвтавома                 = {{IPA|[bɑʂ.ˌqʊ̞rt.tɪ̞ˈlɪ̞]}}
+ |масторт                  = {{Масторкоцт|Россия}}:
+ |ёнкст                    = [[Артовкс:Flag of Bashkortostan.svg|22px]] [[Башкирия Республикась|Башкириясь]] 
+[[Артовкс:Flag of Chelyabinsk Oblast.svg|22px]] [[Челябань ёнкс]]<br />
+[[Артовкс:Flag of Orenburg Oblast.png|22px]] [[Оренбургонь ёнкс]]<br />
+[[Артовкс:Flag of Tyumen Oblast.svg|22px]] [[Тюменень ёнкс]]<br />
+[[Артовкс:Flag of Sverdlovsk Oblast.svg|22px]] [[Свердловонь ёнкс]]<br />
+[[Артовкс:Flag of Kurgan Oblast.svg|22px]] [[Курганонь ёнкс]]<br />
+[[Артовкс:Flag of Samara Oblast.svg|22px]] [[Самара ёнкс]] <br />
+[[Артовкс:Flag of Saratov Oblast.png|22px]] [[Саратов ёнкс]]<br />
+[[Артовкс:Flag of Perm Krai.svg|22px]] [[Пермень край]]<br />
+[[Артовкс:Flag of Tatarstan.svg|22px]] [[Татаронь Республикась|Татариясь]] <br />
+[[Артовкс:Flag of Udmurtia.svg|22px]] [[Удмуртонь Республикась|Удмуртиясь]] <br />
+ |эсьлемпелень кель        = 
+ |вети тевкурось = 
+ |Келень содыцятнень ламоксчись          = 1 245 990 чел. (2010)<ref name="Ethnologue">Ethnologue — Dallas, Texas: SIL International, 2006. {{ref-en}}</ref>
+ |рейтинг                  = 
+ |аштемкс                  = 
+ |кулось                   = 
+ |категория                = [[Евразия кельтне]]
+ |классификация            = 
+ [[Алтайень келень чувтось]]
+: [[Тюркань кельть|Тюркань тарадось]]
+:: [[Кыпчаконь келеть|Кыпчаконь курось]]
+::: [[Башкирэнь келеть|Башкирэнь келесь]] 
+ |Сёрмадомачись                   = кириллицась
+ |ISO1                     = ba
+ |ISO2                     = bak
+ |ISO3                     = bak
+}}
+
+'''Башкирэнь кель'''  ({{Audio|bashqort_tele.ogg|''башҡорт теле''}} {{IPA|[bɑʂ.ˌqʊ̞rt.tɪ̞ˈlɪ̞]}}) — те эсь лемпелень тюркань кель [[Башкирия Республикась|Башкириясо]]. Эйсэнзэ кортыть [[башкирт]].  
+
+Келесь те саеви равчирень-кыпчаконь группаалксонть,  кыпчаконь группанть, тюркань тарадонть алтайень кельтнень. Кортавксонзо: чилисемань, пелеве-чивалгомань ды лембеёнонь.
 
 === Башкирэнь алфавитэсь ===
 
@@ -51,6 +88,8 @@
 | style="width:3em; text-align:center; padding: 3px;" | Ю ю
 | style="width:3em; text-align:center; padding: 3px;" | Я я
 |}
+== Лисьм.: ==
+<references />
 
 {{stub}}
 
