--- a/Башкирэнь_кель.mw
+++ b/Башкирэнь_кель.mw
@@ -37,8 +37,11 @@
 
 Келесь те саеви равчирень-кыпчаконь группаалксонть,  кыпчаконь группанть, тюркань тарадонть алтайень кельтнень. Кортавксонзо: чилисемань, пелеве-чивалгомань ды лембеёнонь.
 
-=== Башкирэнь алфавитэсь ===
+Башкирэнь келесь мастор прявт  Башкортостан Республиканть<ref name="Закон Республики">Закон Республики Башкортостан «О языках народов Республики Башкортостан», 1999 {{ref-ru}}</ref>.  [[Рузонь кель|Рузонь келенть]] марто, башкирэнь келенть марто юридически васенцеде ульнесь кемекстазь Башревкомонь Мельпутовксонть [[1920 ие]]нь [[эйзюрковонь 24 чи]]стэ<ref name="История башкирского">История башкирского народа: в 7 т./ гл. ред. М. М. Кульшарипов; Ин-т истории, языка и литературы УНЦ РАН. — Уфа: Гилем, 2010. — Т. V. — С. 342. — 468 с. — ISBN 978-5-7501-1199-2. {{ref-ru}}</ref>. Неень шкасто кемекстазь Башкортостан Республиканть Конституциясо<ref name="Конституция">[http://www.gsrb.ru/ru/lawmaking/law/8115/ Конституция Республики Башкортостан. ч.4 статья 1 {{ref-ru}}]</ref>.
 
+Весэ масторсонть 1,2 млн. седе ламо кортыцят башкирэнь кельсэ. [[2010 ие]]нь Ловнома-сёрмадстоманть коряс, Россиясо башкирэнь келенть содасызь 1 152 404 ломанть, эйстэст: 977 484 [[башкирт]], 131 950 [[печкаст]], 20 258 [[рузт]], 6 276 [[ветькеть]], 3 211 [[марить]], 1 953 [[казахт]], 1 630 [[удмуртт]], 1 279 [[узбекть]] ды 8 363 лия раськень ломанть<ref name="Владение языками">[http://www.gks.ru/free_doc/new_site/perepis2010/croc/Documents/Vol4/pub-04-06.pdf Владение языками населением наиболее многочисленных национальностей {{ref-ru}}]</ref>.
+
+=== Башкирэнь алфавитэсь ===
 {| style="font-family:Microsoft Sans Serif; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | А а
 | style="width:3em; text-align:center; padding: 3px;" | Б б
