--- a/Чишминэнь_буе.mw
+++ b/Чишминэнь_буе.mw
@@ -49,10 +49,11 @@
 == Эриця раськень==
 Ошсо (Чишма важодиця посёлка) эрить 41.73 % буень ломатне.
 
-[[2010 ие]]нь Ловнома-сёрмадстоманть коряс: [[печкаст]] —  55 %, [[рузт]] — 20,2 %, [[башкирт]] — 18,7 %, [[украинцт]] — 2,5 %, [[эрзят]]<ref name="Мордовское">Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК  {{ref-ru}}</ref>  — 1,5 %, лия раськень ломанть — 2,1 %<ref name="ВПН-2010">{{cite web|url=http://www.bashstat.ru/perepis2010/pub_work/Итоги%20Всероссийской%20переписи%20населения%202010%20года%20по%20Республике%20Башкортостан.pdf|title=Итоги Всероссийской переписи населения по Республике Башкортостан|format=pdf|publisher=Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан|accessdate=2013-03-05|archiveurl=http://www.webcitation.org/6EzC0FMGq|archivedate=2013-03-09}}  {{ref-ru}}</ref>.
+[[2010 ие]]нь Ловнома-сёрмадстоманть коряс: [[печкаст]] —  55 %, [[рузт]] — 20,2 %, [[башкирт]] — 18,7 %, [[украинцт]] — 2,5 %, [[эрзят]]<ref name="Мордовское">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК  {{ref-ru}}]</ref>  — 1,5 %, лия раськень ломанть — 2,1 %<ref name="ВПН-2010">{{cite web|url=http://www.bashstat.ru/perepis2010/pub_work/Итоги%20Всероссийской%20переписи%20населения%202010%20года%20по%20Республике%20Башкортостан.pdf|title=Итоги Всероссийской переписи населения по Республике Башкортостан|format=pdf|publisher=Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан|accessdate=2013-03-05|archiveurl=http://www.webcitation.org/6EzC0FMGq|archivedate=2013-03-09}}  {{ref-ru}}</ref>.
 
 == Чишминэнь буень велеть ==
-
+* [[Енгалышево (Чишминэнь буе)|Енгалышево]]<ref name="Мордовское"/> — эрзянь веле (эрзятеде (74 %))
+* [[Лентовка (Чишминэнь буе)|Лентовка]]<ref name="Мордовское"/> — рузонь-эрзянь веле (эрзятеде (41 %), рузтнеде (41 %))
 
 == Лисьм.: ==
 <references />
