--- a/Енгалышево_(Чишминэнь_буе).mw
+++ b/Енгалышево_(Чишминэнь_буе).mw
@@ -71,7 +71,7 @@
 == Веленть эрямозо  ==
 Велесэ ули «Умарина» морамо кужо. 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Башкириянь велеть|Е]]
