--- a/Лентовка_(Чишминэнь_буе).mw
+++ b/Лентовка_(Чишминэнь_буе).mw
@@ -61,10 +61,16 @@
 }}
 
 '''Лентовка'''  ({{Lang-ru|с. Лентовка}}, {{lang-ba|Лентовка}}) — [[эрзят|эрзянь]]<ref name="население в Башкортостане">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК] {{Ref-ru}}</ref> веле [[Чишминэнь буе]]сэ, [[Башкирия Республикась|Башкирия]]со.
-
+== Эрицят ==
 Эрицятнеде: 27 лом. (2002 ие), 28 лом. (2009 ие), 21 лом. (2010 ие). Эрзят ды рузт.
 
 [[2010 ие]]нь Ловнома-сёрмадстоманть коряс: [[рузт]] — 41 %, [[эрзят]]<ref name="население в Башкортостане"/> — 41 %<ref name="Единый электронный">[http://www.asmo-rb.ru/engine/data/attach/1/spravochnik.xls Единый электронный справочник муниципальных районов Республики Башкортостан ВПН-2002 и 2009] {{Ref-ru}}</ref>. 
+
+==Географиянь аштемась ==
+Кувалмась:<ref name="Административно">Административно-территориальное устройство Республики Башкортостан: Справочник / Сост. Р. Ф. Хабиров. — Уфа: Белая Река, 2007. — 416 с. — 10 000 экз. — ISBN 978-5-87691-038-7. {{Ref-ru}}</ref>
+* буень кушкатаркас (Чишмы): 40 вп,
+* вельсовета кушкатаркас (Енгалышево): 3 вп,
+* сех малавикс чугункань станция (Юматово): 17 вп.
 
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
