--- a/Верхний_Алыштан_(Фёдоронь_буе).mw
+++ b/Верхний_Алыштан_(Фёдоронь_буе).mw
@@ -2,7 +2,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              =Верхний Алыштан
- |оригинальное название   ={{Lang-ru|д. Верхний Алыштан}}
+ |оригинальное название   ={{lang-ba|Үрге Алаштан}}, {{Lang-ru|д. Верхний Алыштан}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -60,7 +60,14 @@
  |язык сайта              = 
 }}
 
-'''Верхний Алыштан'''  ({{Lang-ru|д. Верхний Алыштан}}) — [[эрзят|эрзянь]]<ref name="население в Башкортостане">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК] {{Ref-ru}}</ref> веле [[Фёдоронь буе]]сэ, [[Башкирия Республикась|Башкирия]]со.
+'''Верхний Алыштан'''  ({{lang-ba|Үрге Алаштан}}, {{Lang-ru|д. Верхний Алыштан}}) — [[эрзят|эрзянь]]<ref name="население в Башкортостане">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК] {{Ref-ru}}</ref> веле [[Фёдоронь буе]]сэ, [[Башкирия Республикась|Башкирия]]со.
+
+== Эрицят ==
+Эрицятнеде: 322<ref name="Единый электронный">[http://www.asmo-rb.ru/engine/data/attach/1/spravochnik.xls Единый электронный справочник муниципальных районов Республики Башкортостан ВПН-2002 и 2009] {{Ref-ru}}</ref> лом. (2002 ие), 322<ref name="Единый электронный"/> лом. (2009 ие), 351 лом. (2010 ие). [[Эрзят]]<ref name="население в Башкортостане"/>.
+
+==Географиянь аштемась ==
+Кувалмась:<ref name="Административно">Административно-территориальное устройство Республики Башкортостан: Справочник / Сост. Р. Ф. Хабиров. — Уфа: Белая Река, 2007. — 416 с. — 10 000 экз. — ISBN 978-5-87691-038-7. {{Ref-ru}}</ref>
+* буень кушкатаркас (Фёдоровка): 15 вп.
 
 == Веленть лемденть  ==
 
