*Empty MediaWiki Message*

--- a/Верхний_Алыштан_(Фёдоронь_буе).mw
+++ b/Верхний_Алыштан_(Фёдоронь_буе).mw
@@ -67,7 +67,7 @@
 
 ==Географиянь аштемась ==
 Кувалмась:<ref name="Административно">Административно-территориальное устройство Республики Башкортостан: Справочник / Сост. Р. Ф. Хабиров. — Уфа: Белая Река, 2007. — 416 с. — 10 000 экз. — ISBN 978-5-87691-038-7. {{Ref-ru}}</ref>
-* буень кушкатаркас (Фёдоровка): 15 вп.
+* буень кушкатаркас (Фёдоровка): 15 [[вайгельпе|вп]].
 
 == Веленть лемденть  ==
 
