--- a/Фёдоровка_(смустьтне).mw
+++ b/Фёдоровка_(смустьтне).mw
@@ -7,6 +7,9 @@
 * [[Фёдоровка (Ташто Шайгабуе)|Фёдоровка]] — веле [[Ташто Шайгабуе]]сэ
 * [[Од Фёдоровка (Ташто Шайгабуе)|Од Фёдоровка]] — веле [[Ташто Шайгабуе]]сэ
 * [[Ташто Фёдоровка (Ташто Шайгабуе)|Ташто Фёдоровка]] — веле [[Ташто Шайгабуе]]сэ
+===Башкортостансо ===
+[[Фёдоровка (Фёдоронь буе)|Фёдоровка]] — эрзянь веле [[Фёдоронь буе]]сэ, [[Башкирия Республикась|Башкириясо]]
+
 __DISAMBIG__
 
 [[Category:Авейкетькс]]
