*Empty MediaWiki Message*

--- a/Фёдоронь_буе.mw
+++ b/Фёдоронь_буе.mw
@@ -1,7 +1,8 @@
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Фёдоронь буе
- | Эсьлем                         = {{lang-ba|Фёдоровка районы}}, {{lang-ru|Фёдоровский район}}
+ | Эсьлем                         = {{lang-ba|Фёдоровка районы}}, <br />
+{{lang-ru|Фёдоровский район}}
  | Герб                           = 
  | Коцт                           = 
  | Гимн                           = 
