--- a/Фёдоронь_буе.mw
+++ b/Фёдоронь_буе.mw
@@ -43,13 +43,12 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|80254000000}}
 }}
-
 '''Фёдоронь буе''' ({{lang-ru|Фёдоровский райо́н}}, {{lang-ba|Фёдоровка районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
 Куншка таркась -  [[Фёдоровка (Фёдоронь буе)|Фёдоровка]] велесь. 
 
 == Географиясь ==
-Буесь ашти Башкириянь лембе-чивалгомань ёнксо, Ураликеле коське таркава. Чивалгомасто буесь шабрацек ашти [[Оренбургонь ёнкс]]сонь Шарлыкень буенть марто, [[Пелеве ёнкс|пелевеёнксо]] — [[Стерлибашэнь буе|Стерлибашэнь]], [[лембе ёнкс]]о — [[Куюргазинэнь буе|Куюргазинэнь]],  [[Чилисема|чилисемасто]] — [[Мелеузовонь буе|Мелеузовонь]] Башкириянь буетнень марто. Покшолмазо 1693 вп². Буень куншка таркась ашти 230 [[вайгельпе|вп]] кувалмасо [[Уфа ош]]сто. 
+Буесь ашти Башкириянь лембе-чивалгомань ёнкссо, Ураликеле коське таркава. Чивалгомасто буесь шабрацек ашти [[Оренбургонь ёнкс]]сонь Шарлыкень буенть марто, [[Пелеве ёнкс|пелевеёнкссо]] — [[Стерлибашэнь буе|Стерлибашэнь]], [[лембе ёнкс]]о — [[Куюргазинэнь буе|Куюргазинэнь]],  [[Чилисема|чилисемасто]] — [[Мелеузовонь буе|Мелеузовонь]] Башкириянь буетнень марто. Покшолмазо 1693 вп². [[Уфа ош]]сто саезь буень куншка таркась ашти 230 [[вайгельпе|вп]] кувалмосо. 
 
 
 == Эриця раськень==
@@ -83,7 +82,7 @@
 
 [[2010 ие]]нь Ловнома-сёрмадстоманть коряс: [[печкаст]] —  31,9 %, [[рузт]] — 23,1 %, [[башкирт]] — 20 %, [[ветькеть]] — 12,2 %, [[эрзят]]<ref name="Мордовское">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК  {{ref-ru}}]</ref>  — 10,4 %, лия раськень ломанть — 2,4  %<ref name="ВПН-2010">{{cite web|url=http://www.bashstat.ru/perepis2010/pub_work/Итоги%20Всероссийской%20переписи%20населения%202010%20года%20по%20Республике%20Башкортостан.pdf|title=Итоги Всероссийской переписи населения по Республике Башкортостан|format=pdf|publisher=Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан|accessdate=2013-03-05|archiveurl=http://www.webcitation.org/6EzC0FMGq|archivedate=2013-03-09}}  {{ref-ru}}</ref>.
 
-Раськетьне Ловнома-сёрмадстоманть коряс:
+Раськетне Ловнома-сёрмадстоманть коряс:
 {|border=1
 !ие
 ![[башкирт]]
@@ -126,8 +125,9 @@
 * [[Абдюшев, Хабибулла Бахтигареевич]] — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}) 
 * [[Акчурин, Радиф Галеевич]] — куреш тюремасо мирэнь чемпион
 * [[Антошкин, Николай Тимофеевич|Николай Антошкин]]<ref name="Министерство ">[http://mf.e-mordovia.ru/area/view/25/people  Министерство финансов Республики Мордовия. Известные люди{{ref-ru}}]</ref> —  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
-* [[Бакланов, Пётр Яковлевич]] — экономик-географ,  РАН-нь академик
-* [[Казанин, Геннадий Семёнович]] — учёной-геофизик
+* [[Бакланов, Пётр Яковлевич]]— экономик-географ,  РАН-нь академик
+* [[Казанин, Геннадий Семёнович]] — учёной-геофизик
+
 
 == Лисьм.: ==
 <references />
