/* Фёдоронь буень велеть */ фотокув +

--- a/Фёдоронь_буе.mw
+++ b/Фёдоронь_буе.mw
@@ -107,6 +107,7 @@
 |}
 
 == Фёдоронь буень велеть ==
+[[File:Pokrovsky monastery in Dedovo 2012 11.jpg|thumb|350px|Покровской цёрькувась Дедов велесэ Фёдоронь буесэ ]]
 Буесэнть  68 эрямо таркат 14 велень эрямо таркасо<ref name="RBzak_izm">[http://www.gsrb.ru/MainLeftMenu/ZakonoTvorch/Zakoni/49-2008.php Закон Республики Башкортостан «Об изменениях в административно-территориальном устройстве Республики Башкортостан в связи с объединением отдельных сельсоветов и передачей населённых пунктов» (Принят Государственным Собранием — Курултаем Республики Башкортостан 18 ноября 2008 года)  {{ref-ru}}]</ref>:
 ===башкирэнь велеть ===
 
