--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -96,7 +96,7 @@ MSKS=+2|
 <li> [[Туймазань буе|Туймазань]]
 <li> [[Уфань буе|Уфань]]
 <li> [[Учалинэнь буе|Учалинэнь]]
-<li> [[Фёдоронь буе Башкортостанонь|Фёдоронь буе]]
+<li> [[Фёдоронь буе|Фёдоронь буе]]
 <li> [[Хайбуллань буе|Хайбуллань]]
 <li> [[Чекмагушэнь буе|Чекмагушэнь]]
 <li> [[Чишминэнь буе|Чишминэнь]]
