«Покш эрзянь чи»

--- a/Верхний_Алыштан_(Фёдоронь_буе).mw
+++ b/Верхний_Алыштан_(Фёдоронь_буе).mw
@@ -74,6 +74,7 @@
 == Содавикс ломанть те велестэнть ==
 
 == Веленть эрямозо  ==
+2016 иестэ ацамковонь 15 чистэ васенцеде ютавтозь «Покш эрзянь чи»<ref name="«Erzäks.ru»_«Покш эрзянь чи»">[http://erzyaks.ru/poksh-erzyan-chi-v-fedorovskom-rajone-bashkortostana/ «Erzäks.ru»: «Покш эрзянь чи» в Фёдоровском районе Башкортостана  {{Ref-ru}}]</ref>. 
 == Сёрм.: ==
 <references />
 
