--- a/Фёдоронь_буе.mw
+++ b/Фёдоронь_буе.mw
@@ -51,7 +51,7 @@
 Буесь ашти Башкириянь лембе-чивалгомань ёнкссо, Ураликеле коське таркава. Чивалгомасто буесь шабрацек ашти [[Оренбургонь ёнкс]]сонь Шарлыкень буенть марто, [[Пелеве ёнкс|пелевеёнкссо]] — [[Стерлибашэнь буе|Стерлибашэнь]], [[лембе ёнкс]]о — [[Куюргазинэнь буе|Куюргазинэнь]],  [[Чилисема|чилисемасто]] — [[Мелеузовонь буе|Мелеузовонь]] Башкириянь буетнень марто. Покшолмазо 1693 вп². [[Уфа ош]]сто саезь буень куншка таркась ашти 230 [[вайгельпе|вп]] кувалмосо. 
 
 
-== Эриця раськень==
+== Эриця раськеть==
 Эрицятнеде иетнева:
 {|border=1
 !Ие
