--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -111,7 +111,10 @@ MSKS=+2|
 
 Раськень коряс Башкортостансо, саезь [[2010 ие]]нь Ловнома-сёрмадстоманть коряс, [[рузт]] — 36,1 %, [[башкирт]] — 29,5 %, [[печкаст]] — 25,4 %, [[ветькеть]] — 2,7 %, [[марить]] — 2,6 %, [[украинецт]] — 1 %, [[эрзят]] — 0,5% ды лият  — 2,7 %. Весемекс эрить 160 седе ламо раськеть<ref>[http://www.bashkortostan.ru/news/37713/ В Башкирии проживают представители 160 национальностей и 13 этнических групп{{ref-ru}}]</ref>. 
 
-2002 иестэ эрзятнеде<ref name="население в Башкортостане"/> ульнесть 20300 ломать. Эрить 70-де ламо таркава. Ансяк вейке мокшонь веле — [[Кузьминовка (Фёдоронь буе)|Кузьминовка]]<ref name="население в Башкортостане">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК] {{Ref-ru}}</ref>, 439<ref name="население в Башкортостане"/> лом. марто эрицят.
+===Эрзятне Башкириясо<ref name="население в Башкортостане">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК] {{Ref-ru}}</ref>===
+2002 иестэ эрзятнеде<ref name="население в Башкортостане"/> ульнесть 20300 ломать. Эрить 70-де ламо таркава. Ансяк вейке мокшонь веле — [[Кузьминовка (Фёдоронь буе)|Кузьминовка]]<ref name="население в Башкортостане"/>, 439<ref name="население в Башкортостане"/> лом. марто эрицят. 
+
+[[Кожай-Андреево (Туймазань буе)|Кожай-Андреева]] ды [[Кожай-Максимово (Ермекеень буе)|Кожай-Максимово]] велетнень эрицятне эсист пряст лемдить '''«мурза»'''<ref name="население в Башкортостане"/>. Те кортамонть сёрмадызь 2003 иестэ ИЭИ УНЦ РАН-нь ваномасонть не таркатнева.
 
 ==Фотованмот ==
 <gallery>
