--- a/Апельсин.mw
+++ b/Апельсин.mw
@@ -36,7 +36,7 @@
 | ncbi              = 
 }}
 
-'''Апельсин чувто''' ({{lang-la|Citrus sinensis}}) — иень перть пиже чувто, цитрусонь буень (Citrus), Рутонь семиясто (Rutaceae).
+'''Апельсин чувто''', лиякс: '''Тюжамарь чувто''' ({{lang-la|Citrus sinensis}}) — иень перть пиже чувто, цитрусонь буень (Citrus), Рутонь семиясто (Rutaceae).
 
 Лопанзо чопода-[[пиже]]ть, цецянзо [[ашо]]т. Чувтонть ушодсть кастамонзо [[Китай Мастор|Китаень Масторсо]] [[2500 ие м. п. икеле|2,5 тёж. ие м. п. икеле]]. [[Европа]]в ускозь ульнесь португалецэнь иневедьга укшныцятнесэ. Касы Кавказсо, [[Куншкамасторонь иневедь|Куншкамасторонь иневедень]] чирева, ды [[Куншкань Америка]]со.
 
