/* Башкириянь буетне */ витн.-петн.

--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -69,7 +69,7 @@ MSKS=+2|
 <li> [[Дуванонь буе|Дуванонь]]
 <li> [[Дюртюлинэнь буе|Дюртюлинэнь]]
 <li> [[Ермекеевень буе|Ермекеевень]]
-<li> [[Зианчуринень буе|Зианчуринень]]
+<li> [[Зианчуринэнь буе|Зианчуринэнь]]
 <li> [[Зилаирэнь буе|Зилаирэнь]]
 <li> [[Иглинэнь буе|Иглинэнь]]
 <li> [[Илишевень буе|Илишевень]]
