*Empty MediaWiki Message*

--- a/Архангелэнь_буе.mw
+++ b/Архангелэнь_буе.mw
@@ -1,7 +1,7 @@
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Архангелэнь буе
- | Эсьлем                         = {{lang-ba|Бишбүләк районы}}
+ | Эсьлем                         = {{lang-ba|Архангел районы}}
  | Герб                           = 
  | Коцт                           = 
  | Гимн                           = 
