--- a/Хайбуллань_буе.mw
+++ b/Хайбуллань_буе.mw
@@ -97,6 +97,19 @@
 == Хайбуллань буень велеть ==
 
 == Содавикс ломанть те буестэнть == 
+* [[Адигамов, Абдулла Камалетдинович]] —  ({{lang-ru|партийный и государственный деятель, член правительства [[Малая Башкирия|Башкирской республики]]}}).
+* [[Ахметшин, Каюм Хабибрахманович]] — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}}) 
+* [[Бикбавов, Абдрашит Ильясович]] — вийкердиень ды вейсэйдень-теий, бащкирень раськень кепедстямонь улиця.
+* [[Багишаев, Зайнулла Абдулгалимович]] — россиянь вийкердиень ды политикань теий.
+* [[Идрисов, Мухамет Рамазанович]] — советэнь башкирэнь киштиця, раськень РСФСР-нь артист.
+* [[Исянбаев, Юмабай Мутигуллович]] — башкирэнь седией, раськень БАССР-нь артист.
+* [[Муталов, Гайнетдин Хайретдинович]] — тонавтыця, раськень БАССР-нь артист (1969).
+* [[Муталов, Минниахмет Гильмитдинович]] — геолог-геохимик, геолого-минералогияньч наукань кандидат (1961).
+* [[Чекмарёв, Сергей Иванович]] (1909/1910—1933) — советсэнь валморозей.
+* [[Якупов, Гильман Гирфанович]] — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}) 
+* [[Юнусов, Мирсаит Гумарович]] — «Йэншишмэ» кулялопань прявт редактор.
+
+
 == Лисьм.: ==
 <references />
 
