--- a/Аургазинэнь_буе.mw
+++ b/Аургазинэнь_буе.mw
@@ -45,7 +45,56 @@
 
 '''Аургазинэнь буе''' ({{lang-ru|Аургазинский район}}, {{lang-ba|Ауырғазы районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
-Куншка таркась - [[Толбазы (Башкирия)|Толбазы]] веле. 
+Куншка таркась - [[Толбазы (Башкирия)|Толбазы]] веле, кона ашти 80 вп лембеёнксов Уфа ошсто ды 30 вп чивалгома ёнов  Ашо Эрьке чугункань станциястонть. 
+
+
+== Географиясь ==
+Буесь ашти Башкириянь куншка таркасо. Шабрацек ашти [[Кармаскалинэнь буе]] пелеве ёнкссо, [[Гафурийень буе]] чилисемасо, [[Стерлитамаконь буе]] лембе ёнкссо, [[Альшеевень буе|Альшеевень]] ды [[Давлекановонь буе|Давлекановонь]] буетнень  марто чивалгомань ёнкссо.
+
+Буеванть чудить [[Уршак (лей)|Уршак]] [[Аургазы лей]], [[Белый Ключ (Уршаконь сянглей)|Белый Ключ]], [[Узень (лей)|Узень]] сянглейть; [[Кузъелга лей]] ды лият. Распространены выщелочные, [[карбонатные почвы]], серые лесные почвы и типичные чернозёмы.
+
+[[Тумо]]нь, тумо-[[килей|килеень]], [[пекше]]нь ды [[пой|поень]] [[вирь]]тне весемикс касыть 18 % буень модатаркатнема,  седе ламокс верьга таркава, теить усиянь пурнавкст. Весемикс вирьтеде 27,3 %. 
+
+Весемикс мунициальной буенть покшолмась: 2014 вп². Покшолмась (тёж. га.) озавтома модасо 153,8 (76,4 %) весе покшолмастонть), эйстэст пашня: 95,6, ледемат: 14,1, ярсамолугат: 43,1, вирьть: 36,4, верьга ведьть: 1,2 тёж. га.
+
+== Эриця раськеть==
+[[2010 ие]]нь Ловнома-сёрмадстоманть коряс: [[печкаст]] — 42,2 %,[[ветькеть]] — 29,3 %, [[башкирт]] — 18,9 %, [[рузт]] —  6,4   %, [[украинецт]] — 1,2 %, [[эрзят]]<ref name="население Башкирии">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК  {{ref-ru}}]</ref> — 1 %, лия раськень ломанть — 1 %<ref name="ВПН-2010">{{cite web|url=http://www.bashstat.ru/perepis2010/pub_work/Итоги%20Всероссийской%20переписи%20населения%202010%20года%20по%20Республике%20Башкортостан.pdf|title=Итоги Всероссийской переписи населения по Республике Башкортостан|format=pdf|publisher=Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан|accessdate=2013-03-05|archiveurl=http://www.webcitation.org/6EzC0FMGq|archivedate=2013-03-09}}  {{ref-ru}}</ref>.
+
+
+Эрицятнеде иетнева:
+{|border=1
+!Ие
+!Эрицятнеде
+|-
+|[[2002]]<ref name="Всероссийская перепись">[http://www.perepis2002.ru/ct/doc/1_TOM_01_04.xls Всероссийская перепись населения 2002 года. Том. 1, таблица 4. Численность населения России, федеральных округов, субъектов Российской Федерации, районов, городских поселений, сельских населённых пунктов - райцентров и сельских населённых пунктов с населением 3 тысячи и более. {{ref-ru}}]</ref>
+|38 996
+|-
+|[[2008]]<ref name="1.5. Численность">[http://bashstat.gks.ru/wps/wcm/connect/rosstat_ts/bashstat/resources/88ec76804db875b29208d3356f373569/4+раздел.pdf 1.5. Численность населения республики Башкортостан по муниципальным образованиям на 1 января 2009 года {{ref-ru}}]</ref>
+|37 755
+|-
+|[[2009]]<ref name="Численность постоянного">[http://www.gks.ru/bgd/regl/B09_109/IssWWW.exe/Stg/d01/tabl-21-09.xls Численность постоянного населения Российской Федерации по городам, посёлкам городского типа и районам на 1 января 2009 года. {{ref-ru}}]</ref>
+|37 379
+|-
+|[[2010]]<ref name="Всероссийская перепись 2010">[http://bashstat.gks.ru/wps/wcm/connect/rosstat_ts/bashstat/resources/2f055a804e303140ba45fe3bf8d20d64/Численность+населения+по+населенным+пунктам+Республики+Башкортостан.pdf Всероссийская перепись населения 2010 года. Численность населения по населённым пунктам Республики Башкортостан. {{ref-ru}}]</ref> 
+|36 970
+|-
+|[[2012]]<ref name="Численность населения_ 2012">[http://www.gks.ru/free_doc/doc_2012/bul_dr/mun_obr2012.rar Численность населения Российской Федерации по муниципальным образованиям. Таблица 35. Оценка численности постоянного населения на 1 января 2012 года {{ref-ru}}]</ref> 
+|36 226
+|-
+|[[2013]]<ref name="Численность населения Российской">[http://www.gks.ru/free_doc/doc_2013/bul_dr/mun_obr2013.rar Численность населения Российской Федерации по муниципальным образованиям на 1 января 2013 года. — М.: Федеральная служба государственной статистики Росстат, 2013. — 528 с. (Табл. 33. Численность населения городских округов, муниципальных районов, городских и сельских поселений, городских населённых пунктов, сельских населённых пунктов). {{ref-ru}}]</ref>
+|35 609	
+|-
+|[[2014]]<ref name="Таблица 33">[http://www.gks.ru/free_doc/doc_2014/bul_dr/mun_obr2014.rar Таблица 33. Численность населения Российской Федерации по муниципальным образованиям на 1 января 2014 года.  {{ref-ru}}]</ref>
+|35 035
+|-
+|[[2015]]<ref name="Численность населения 2015">[http://www.gks.ru/free_doc/doc_2015/bul_dr/mun_obr2015.rar Численность населения Российской Федерации по муниципальным образованиям на 1 января 2015 года {{ref-ru}}]</ref>
+|34 141
+|-
+|[[2016]]<ref name="Численность населения 2016">[http://www.gks.ru/free_doc/doc_2016/bul_dr/mun_obr2016.rar Численность населения Российской Федерации по муниципальным образованиям на 1 января 2016 года {{ref-ru}}]</ref>
+|33 721
+|-
+|}
+
 
 == Аургазинэнь буень велеть ==
 
