--- a/Аургазинэнь_буе.mw
+++ b/Аургазинэнь_буе.mw
@@ -51,7 +51,7 @@
 == Географиясь ==
 Буесь ашти Башкириянь куншка таркасо. Шабрацек ашти [[Кармаскалинэнь буе]] пелеве ёнкссо, [[Гафурийень буе]] чилисемасо, [[Стерлитамаконь буе]] лембе ёнкссо, [[Альшеевень буе|Альшеевень]] ды [[Давлекановонь буе|Давлекановонь]] буетнень  марто чивалгомань ёнкссо.
 
-Буеванть чудить [[Уршак (лей)|Уршак]] [[Аургазы лей]], [[Белый Ключ (Уршаконь сянглей)|Белый Ключ]], [[Узень (лей)|Узень]] сянглейть; [[Кузъелга лей]] ды лият. Распространены выщелочные, [[карбонатные почвы]], серые лесные почвы и типичные чернозёмы.
+Буеванть чудить [[Уршак (лей)|Уршак]] [[Аургазы лей]], [[Белый Ключ (Уршаконь сянглей)|Белый Ключ]], [[Узень (лей)|Узень]] сянглейть; [[Кузъелга лей]] ды лият.
 
 [[Тумо]]нь, тумо-[[килей|килеень]], [[пекше]]нь ды [[пой|поень]] [[вирь]]тне весемикс касыть 18 % буень модатаркатнема,  седе ламокс верьга таркава, теить усиянь пурнавкст. Весемикс вирьтеде 27,3 %. 
 
