--- a/«Торама»_морамо-седямо_кужо.mw
+++ b/«Торама»_морамо-седямо_кужо.mw
@@ -4,9 +4,9 @@
  |Ключ               = 
  |Лого               = 
  |Ширина_лого        = 
- |Фото               =
- |Описание_фото      = «Торама» 1992 иестэ
- |Ширина_фото        = 200px
+ |Фото               =Torama REM 30.05.2009.jpg
+ |Описание_фото      = «Торамась» моры Россиянь Этнографиянь музейсэ ([[Ине-Петрань ош]]), 2009 иень панжикоовнь 30 чи
+ |Ширина_фото        = 300px
  |Фон                = 
  |Жанр               = <!-- эли Жанры-->
  |Иеть               = 1990 - неень шкас
