--- a/Алоош.mw
+++ b/Алоош.mw
@@ -76,8 +76,9 @@
 {{Лия смустьтне|Ало (смустьтне)}}
 '''А́лоош''' (лиякс: '''Нижнёй''', '''Нижней Новгород''', {{lang-ru|Нижний Новгород}}) — те Россия Масторонть ошось, [[Алоошонь ёнкс|Алоошонь ёнксонть]] прявтошось.
 
-Ошонть таркасо икеле аштесь покш эрзянь ош — Обран ошось.
-Кезэринь шказо: Эрзянь Обран ошось ульнесь Равонь-Окань юткосне, вере пандо прясо, косо нев Ало ошонь кремлясь. А Окань томбале, эрькесть ало ёнксо Олодимир-Суздальскоинь рузтнэ тейзть эйсест од ошне ды лемдизь Од Ало ошокс (Нижний Новгород). Ташто Обран ошость каршо, конась се шкава ульнесь паро вере таркасне чувтонь пирень куншкасо. Рузтнэ теизь Ало ошость, икелев ванозь, - бути седе вадрясто турьмекс эрзятнень марто. Колияк чумом а кенери, кода мерьсынь валтнэнь - седе тов, Обран ошость пултызь. Мееле, те ошонь юртозне кевень кремлясть путызь.   
+Ошонть таркасо икеле аштесь покш эрзянь ош — [[Обран ош]]ось.
+
+Кезэрень шказо: Эрзянь Обран ошось ульнесь [[Рав]]онь-[[Йока|Окань]] юткосо, вере пандо прясо, косо нев Ало ошонь кремлясь. Окань томбале эрькесь, ало ёнксо Олодимир-Суздальскоень [[рузт]]нэ тейзть эйсест од ошне ды лемдизь '''Од Ало ошокс''' (Нижнёй Новгород). Ташто Обран ошось каршо, конась се шкава ульнесь паро вере таркасо чувтонь пирень куншкасо. Рузтнэ теизь Ало ошонть, икелев ванозь, - бути седе вадрясто туремс эрзятнень марто. Седе тов, Обран ошонть пултызь, мееле, те ошонь юртонте кевень кремля путозь.   
 
 == Содавикс ломанть тестэнть ==
 * [[Куклин, Вячеслав Николаевич|Вячеслав Николаевич Куклин]]<ref name="МРОКМ им. И.Д. Воронина_В.Н. Куклин">[http://www.mrkm.ru/news/?id=196  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». 75 – лет историку-краеведу В.Н. Куклину.] {{ref-ru}}</ref>— историк-краевед, исторической наукань кандидат, Мордовской АССР-нь культурань заслуженной важодиця, РМ-нь Масторпрявтонь казнень лауреат
