/* Башкириянь буетне */ Бакалы:нь

--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -50,7 +50,7 @@ MSKS=+2|
 # [[Аскинэнь буе|Аскинэнь]]
 # [[Аургазинэнь буе|Аургазинэнь]]
 # [[Баймаконь буе|Баймаконь]]
-# [[Бакалинэнь буе|Бакалинэнь]]
+# [[Бакалынь буе|Бакалынь]]
 # [[Балтачевэнь буе|Балтачевэнь]]
 # [[Белебеень буе|Белебеень]]
 # [[Белокатаень буе|Белокатаень]]
