*Empty MediaWiki Message*

--- a/Бакалынь_буе.mw
+++ b/Бакалынь_буе.mw
@@ -47,7 +47,7 @@
 
 Куншка таркась - [[Бакалы (Башкирия)|Бакалы]] веле. 
 
-== Баймаконь буень велеть ==
+== Бакалынь буень велеть ==
 
 
 == Лисьм.: ==
