Отмена правки 82233, сделанной [[Special:Contributions/Erzianj jurnalist|Erzianj jurnalist]] ([[User talk:Erzianj jurnalist|обсуждение]])

--- a/Балтачевэнь_буе.mw
+++ b/Балтачевэнь_буе.mw
@@ -17,7 +17,7 @@
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
  | Включает                       = 
- | Прявтош                        = [[Таштобалтачево (Башкирия)|Таштобалтачево]] веле 
+ | Прявтош                        = [[Старобалтачево (Башкирия)|Старобалтачево]] веле 
  | Образование                    = [[1930 ие]]
  | Упразднение                    = 
 |Глава                            = 
@@ -45,7 +45,7 @@
 
 '''Балтачевэнь буе''' ({{lang-ru|Балтачевский район}}, {{lang-ba|Балтаc районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
-Куншка таркась - [[Таштобалтачево (Башкирия)|Таштобалтачево]] веле. 
+Куншка таркась - [[Старобалтачево (Башкирия)|Старобалтачево]] веле. 
 
 == Балтачевэнь буень велеть ==
 
