--- a/ЛопаПарцун:Wikidata%2Fp1082.mw
+++ b/ЛопаПарцун:Wikidata%2Fp1082.mw
@@ -1,3 +1,3 @@
-<includeonly>{{#invoke:Wikidata|formatStatements|claim-module=Wikidata/number|claim-function=formatQuantityWithDateClaim|property=p1082|unit=чел.|value={{{1|}}}|plain={{{plain|false}}}|separator={{{separator|,<br />}}}|conjunction={{{conjunction|,<br />}}}}}{{#ifeq:{{NAMESPACENUMBER}}|10|[[Категория:Википедия:Шаблоны, использующие Викиданные]]}}</includeonly><noinclude>{{doc}}
+<includeonly>{{#invoke:Wikidata|formatStatements|claim-module=Wikidata/number|claim-function=formatQuantityWithDateClaim|property=p1082|unit=лом.|value={{{1|}}}|plain={{{plain|false}}}|separator={{{separator|,<br />}}}|conjunction={{{conjunction|,<br />}}}}}{{#ifeq:{{NAMESPACENUMBER}}|10|[[Категория:Википедия:Шаблоны, использующие Викиданные]]}}</includeonly><noinclude>{{doc}}
 [[Категория:Шаблоны:Викиданные]]
 </noinclude>
