--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -94,10 +94,10 @@
 |}{{#if:{{NAMESPACE}}{{{nocat|}}}||<!--<!--
 -->[[Категория:Велетне-сядтнэ ловнома тешкскерьксэнть коряс]]<!--
 -->{{#if:{{{дата основания|}}}|{{#iferror:[[Категория:Населённые пункты, основанные в {{#expr:{{ссылку в число|{{{дата основания}}}}}}} году]]}}}}<!--
--->{{#if:{{{почтовый индекс|}}}{{{почтовые индексы|}}}||[[Категория:Населённые пункты без почтового индекса]]}}<!--
+-->{{#if:{{wikidata|p281|{{{почтовый индекс|}}}{{{почтовые индексы|}}}}}||[[Категория:Населённые пункты без почтового индекса]]}}<!--
 -->{{#if:{{{Категория на Викискладе|}}}|[[К:Википедия:Ссылка на Викисклад непосредственно в статье]]}}<!--
 -->{{#if:{{wikidata|p17|{{{мастор|}}}}}||[[Категория:Населённые пункты без указания страны]]}}<!--
--->{{#if:{{{эрицятне|}}}||[[Категория:Населённые пункты без указания населения]]}}<!--
+-->{{#if:{{wikidata|p1082|{{{эрицятне|}}}}}||[[Категория:Населённые пункты без указания населения]]}}<!--
 {{#if:{{wikidata|p373|{{{категория в Commons|}}}}}||[[Категория:Статьи о населённых пунктах без категории на Викискладе]]}}
 -->}}</includeonly><noinclude>
 {{doc}}
