--- a/Кортамо:Балтачевэнь_буе.mw
+++ b/Кортамо:Балтачевэнь_буе.mw
@@ -1,1 +1,2 @@
 [[User: ‎Erzianj jurnalist|Andü]], я считаю, что в данном случае переводить не надо. Ориентируемся на политику перевода географических названий в других языках. Если двойное название, то "определение" переводим, все эти Северные Дакоты и Новые Зеландии. Если определение слилось с названием - то оставляем как есть, сравни Ньюфаундленд и Ньюпорт. Как я понимаю, в эрзянском никто не формировал политику перевода географических названий, в итоге и получались "Новой Земля усия ашти Северной Ледовитой океансо". Так что если мы зафиксируем подобное правило,  в дальнейшем исключим разнобой в названиях. --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 08:45, 25 Ацамковонь 2016 (UTC)
+* Я согласен, [[User: ‎Kaftaj|Denö]]! Но надо тогда прийти к единомыслию, и то, что уже переведено (к примеру, [[Покш Шуструй (Атюрьбуе)|Большой Шуструй]], [[Вишка Шуструй (Атюрьбуе)|Малый Шуструй]], [[Ало Пишляй (Атюрьбуе)|Нижний Пишляй]], [[Ало Богдановка (Атюрьбуе)|Нижняя Богдановка]].... и примеров море!) надо переделать. --[[Теиця:Erzianj jurnalist|Erzianj jurnalist]] ([[Теицянь кортамось:Erzianj jurnalist|обсуждение]]) 14:14, 25 Ацамковонь 2016 (UTC)
